--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,3 @@
-@import url(fontawesome-all.min.css);
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,400italic,600italic|Roboto+Slab:400,700");
 /*
 	Editorial by HTML5 UP
@@ -128,7 +127,8 @@ em, i {
   font-style: italic; }
 
 p {
-  margin: 0 0 2em 0; }
+  margin: 0 0 2em 0; 
+}
 
 h1, h2, h3, h4, h5, h6 {
   color: #0a0a0a;
@@ -211,6 +211,42 @@ pre {
     line-height: 1.75;
     padding: 1em 1.5em;
     overflow-x: auto; }
+
+.profilePic {
+  -moz-flex: 0;
+  -webkit-flex: 0;
+  -ms-flex: 0;
+  flex: 0;
+  width: auto;
+  height: 174px;
+}
+
+.profileName{
+  font-size: 36px;
+  margin-bottom: 0px;
+}
+
+.education{
+  font-size:16px;
+  display: block;
+  margin-bottom: 36px;
+}
+
+.google-scholar-icon {
+  height: 23.5px;
+  width: auto;
+  fill: '#000';
+  transition: 'color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out';
+}
+
+.google-scholar-icon:hover{
+  fill: #f56a6a;
+  transition: 'color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out';
+}
+
+header.major {
+  font-size: 18px;
+}
 
 hr {
   border: 0;
@@ -989,13 +1025,21 @@ hr {
 section.special, article.special {
   text-align: center; }
 
-header p {
+header .profileIntro {
   font-family: "Roboto Slab", serif;
   font-size: 1em;
   font-weight: 400;
   letter-spacing: 0.075em;
   margin-top: -0.5em;
-  text-transform: uppercase; }
+  -moz-flex: 2;
+  -webkit-flex: 2;
+  -ms-flex: 2;
+  flex: 2;
+  }
+  
+  header .profileIntro h3{
+    text-transform: uppercase; 
+  }
 
 header.major > :last-child {
   border-bottom: solid 3px #f56a6a;
@@ -1186,7 +1230,7 @@ input[type="radio"] + label:before {
     padding: 0; }
 
 /* Icon */
-.icon {
+/* .icon {
   text-decoration: none;
   border-bottom: none;
   position: relative; }
@@ -1208,7 +1252,7 @@ input[type="radio"] + label:before {
   .icon.solid:before {
     font-weight: 900; }
   .icon.brands:before {
-    font-family: 'Font Awesome 5 Brands'; }
+    font-family: 'Font Awesome 5 Brands'; } */
 
 /* Image */
 .image {
@@ -1269,8 +1313,8 @@ ul {
   list-style: disc;
   margin: 0 0 2em 0;
   padding-left: 1em; }
-  ul li {
-    padding-left: 0.5em; }
+  /* ul li {
+    padding-left: 0.5em; } */
   ul.alt {
     list-style: none;
     padding-left: 0; }
@@ -1339,20 +1383,6 @@ ul.actions {
     ul.actions.fit.stacked {
       width: 100%; }
 
-/* Icons */
-ul.icons {
-  cursor: default;
-  list-style: none;
-  padding-left: 0; }
-  ul.icons li {
-    display: inline-block;
-    padding: 0 1em 0 0; }
-    ul.icons li:last-child {
-      padding-right: 0; }
-    ul.icons li .icon {
-      color: inherit; }
-      ul.icons li .icon:before {
-        font-size: 1.25em; }
 
 /* Contact */
 ul.contact {
@@ -1619,7 +1649,8 @@ button,
     display: flex;
     margin: 0 0 3em 3em;
     position: relative;
-    width: calc(50% - 3em); }
+    /* width: calc(50% - 3em);  */
+  }
     .features article:nth-child(2n - 1) {
       margin-right: 1.5em; }
     .features article:nth-child(2n) {
@@ -1670,7 +1701,9 @@ button,
       -webkit-flex-shrink: 1;
       -ms-flex-shrink: 1;
       flex-shrink: 1;
-      width: 100%; }
+      width: 100%;
+      font-size: 16px;
+     }
       .features article .content > :last-child {
         margin-bottom: 0; }
   @media screen and (max-width: 980px) {
@@ -1937,11 +1970,18 @@ button,
   #sidebar > .inner {
     padding: 2.22222em 2.22222em 2.44444em 2.22222em ;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
     width: 26em; }
     #sidebar > .inner > * {
-      border-bottom: solid 2px rgba(210, 215, 217, 0.75);
+      
+      /* border-bottom: solid 2px rgba(210, 215, 217, 0.75); */
       margin: 0 0 3.5em 0;
       padding: 0 0 3.5em 0; }
+      #sidebar > .inner #menu {
+        flex: 1;
+      }
       #sidebar > .inner > * > :last-child {
         margin-bottom: 0; }
       #sidebar > .inner > *:last-child {
@@ -2077,12 +2117,9 @@ button,
   display: flex;
   border-bottom: solid 5px #f56a6a;
   padding: 6em 0 1em 0;
+  gap: 30px;
   position: relative; }
   #header > * {
-    -moz-flex: 1;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
     margin-bottom: 0; }
   #header .logo {
     border-bottom: 0;
@@ -2090,7 +2127,23 @@ button,
     font-family: "Roboto Slab", serif;
     font-size: 1.125em; }
   #header .icons {
-    text-align: right; }
+    -moz-flex: 0;
+    -webkit-flex: 0;
+    -ms-flex: 0;
+    flex: 0; 
+  }
+  #header .icons a {
+    text-decoration: none;
+    border-bottom: none;  
+  }
+  #header .icons a svg {
+    height: auto;
+    width: 36px;
+  }
+  #header .icons a svg:hover {
+    fill: #f56a6a;
+  }
+  
   @media screen and (max-width: 1680px) {
     #header {
       padding-top: 5em; } }
@@ -2100,12 +2153,7 @@ button,
       #header .logo {
         font-size: 1.25em;
         margin: 0; }
-      #header .icons {
-        height: 5em;
-        line-height: 5em;
-        position: absolute;
-        right: -0.5em;
-        top: 0; } }
+    }
 
 /* Banner */
 #banner {
@@ -2211,7 +2259,7 @@ button,
     color: inherit;
     cursor: pointer;
     display: block;
-    font-size: 0.9em;
+    font-size: 1.1em;
     padding: 0.625em 0; }
     #menu ul a:hover, #menu ul span:hover {
       color: #f56a6a; }
